--- a/app/routes/products-services.module.css
+++ b/app/routes/products-services.module.css
@@ -62,7 +62,8 @@
 .productImage {
   width: 100%;
   height: 220px;
-  object-fit: cover;
+  object-fit: contain;
+  background-color: var(--color-neutral-2);
 }
 
 .productContent {
