--- a/app/routes/products.module.css
+++ b/app/routes/products.module.css
@@ -51,6 +51,9 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
 }
 
 .productCard:hover {
